--- a/src/app/util/dropdowns/select/select-no-search.component.html
+++ b/src/app/util/dropdowns/select/select-no-search.component.html
@@ -7,7 +7,13 @@
     class="p-2 bg-inherit flex justify-between items-center rounded cursor-pointer transition-colors"
     (click)="toggleDropdown()"
   >
-    <span *ngIf="selectedItem">{{ selectedItem.name }}</span>
+    <span *ngIf="selectedItem">
+      @if (selectedItem.name) {
+        {{ selectedItem.name }}
+      } @else {
+        {{ selectedItem }}
+      }
+    </span>
     <span *ngIf="!selectedItem" class="text-menu-600">
       {{ placeholder }}
     </span>
@@ -30,11 +36,21 @@
           *cdkVirtualFor="let item of items"
           class="mx-1 rounded py-0.5 flex justify-between px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.name === item.name,
+            'bg-menu-200':
+              (selectedItem &&
+                selectedItem.name &&
+                selectedItem.name === item.name) ||
+              selectedItem === item,
           }"
           (click)="selectItem(item)"
         >
-          <span>{{ item.name }}</span>
+          <span>
+            @if (item.name) {
+              {{ item.name }}
+            } @else {
+              {{ item }}
+            }
+          </span>
         </div>
       </cdk-virtual-scroll-viewport>
     </div>
@@ -61,11 +77,19 @@
           *cdkVirtualFor="let item of items"
           class="mx-2 rounded py-0.5 px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.name === item.name,
+            'bg-menu-200':
+              (selectedItem &&
+                selectedItem.name &&
+                selectedItem.name === item.name) ||
+              selectedItem === item,
           }"
           (click)="selectItem(item)"
         >
-          {{ item.name }}
+          @if (item.name) {
+            {{ item.name }}
+          } @else {
+            {{ item }}
+          }
         </div>
       </cdk-virtual-scroll-viewport>
     </div>
