fix landing image

--- a/src/app/battle-zone/landing.component.html
+++ b/src/app/battle-zone/landing.component.html
@@ -13,7 +13,10 @@
     </div> -->
   </div>
   <div class="w-full aspect-square flex flex-col justify-between items-center">
-    <img class="object-contain" src="../../assets/images/pdbl.png" />
+    <img
+      class="object-contain"
+      src="../../assets/images/battle-zone/pdbl.png"
+    />
     <div
       class="hover:cursor-pointer hover:border-fuchsia-400 hover:bg-fuchsia-300 flex items-center justify-center border-fuchsia-300 bg-fuchsia-200 border text-center py-4 px-8 m-4 text-2xl font-nasa rounded-xl"
       routerLink="sign-up"
