--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -22,12 +22,12 @@
     </div>
   </div>
   <div class="flex flex-col w-5/6 md:w-2/3 h-5/6 md:h-3/4">
-    <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
+    <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-4">
       <strong
         class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-200 hover:cursor-pointer border-menu-400 bg-menu-300"
         routerLink="/about"
       >
-        What is Pokemon DraftZone?
+        About Pokemon DraftZone
       </strong>
       <a
         href="https://discord.gg/sQUEBW4UVx"
@@ -43,6 +43,12 @@
       >
         <strong>Contribute to the project</strong>
       </a>
+      <strong
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-200 hover:cursor-pointer border-menu-400 bg-menu-300"
+        routerLink="/supporters"
+      >
+        Project Supporters
+      </strong>
     </div>
     <div
       class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-menu-300 border-menu-400"
