--- a/src/app/tools/teambuilder/teambuilder.component.html
+++ b/src/app/tools/teambuilder/teambuilder.component.html
@@ -1,12 +1,1 @@
-<!-- Teambuilder
-<div class="flex p-2">
-  <select-search
-    [items]="names"
-    [placeholder]="'Select a pokemon'"
-    class="w-72"
-    (itemSelected)="addPokemon($event)"
-  ></select-search>
-</div>
-@for (pokemon of team; track $index) {
-  <teambuilder-pokemon [pokemon]="pokemon"></teambuilder-pokemon>
-} -->
+<teambuilder-pokemon></teambuilder-pokemon>
