--- a/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
+++ b/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
@@ -2,38 +2,16 @@
   [formGroup]="draftForm"
   (ngSubmit)="onSubmit()"
   (keydown.enter)="$event.preventDefault()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-menu-300 shadow-menu-600 rounded-xl"
+  class="p-2 m-2 shadow-md team bg-menu-300 shadow-menu-600 rounded-xl"
 >
   <div class="w-full">
     <div class="grid grid-cols-2 gap-x-4">
-      <div>
-        <label class="block mb-1 font-bold">Format</label>
-        <div
-          class="w-full px-2 text-center rounded-full shadow-md text-symbolColor-main bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
-        >
-          <select-no-search
-            [items]="formats"
-            [placeholder]="'Select Format'"
-            formControlName="format"
-          ></select-no-search>
-        </div>
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Ruleset</label>
-        <div
-          class="w-full px-2 text-center rounded-full shadow-md text-symbolColor-main bg-menu-200 focus:outline-none focus:ring-2 focus:ring-menu-500 focus:bg-menu-100"
-        >
-          <select-no-search
-            [items]="rulesets"
-            [placeholder]="'Select Ruleset'"
-            formControlName="ruleset"
-          ></select-no-search>
-        </div>
-      </div>
+      <format-select formControlName="format"></format-select>
+      <ruleset-select formControlName="ruleset"></ruleset-select>
     </div>
   </div>
 
-  <div class="grid w-full grid-cols-1 gap-4 p-2 lg:grid-cols-2">
+  <div class="grid w-full grid-cols-1 gap-4 px-2 pb-2 lg:grid-cols-2">
     <div>
       <label for="team1form" class="font-nasa">Team 1</label>
       <team-form
