--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -102,31 +102,19 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: hsl(
-      var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity))
-    );
+    background: var(--mat-sys-surface);
     border-radius: 100vh;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: hsl(
-      var(--twc-menu-300) / var(--twc-menu-300-opacity, var(--tw-bg-opacity))
-    );
+    background: var(--mat-sys-surface-dim);
     border-radius: 100vh;
-    border: 2px solid
-      hsl(
-        var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity))
-      );
+    border: 2px solid var(--mat-sys-surface);
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: hsl(
-      var(--twc-menu-400) / var(--twc-menu-400-opacity, var(--tw-bg-opacity))
-    );
-    border: 1px solid
-      hsl(
-        var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity))
-      );
+    background: var(--mat-sys-surface-container-high);
+    border: 1px solid var(--mat-sys-surface);
   }
 
   .tooltip {
