--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
               class="flex items-center rounded-lg px-2 py-1 hover:bg-menu-200 hover:cursor-pointer h-full space-x-2"
             >
               <img src="{{ user.picture }}" class="h-full rounded-full" />
-              <div>{{ user.name }}</div>
+              <div>{{ user.username }}</div>
             </div>
             <div
               *ngIf="userDropdown"
